Drop section on why to use VCS

--- a/handouts/handout-lesson1.tex
+++ b/handouts/handout-lesson1.tex
@@ -13,22 +13,8 @@
 
 \begin{center}
   {\LARGE
-  Using Git to Code, Collaborate and Share - Lesson 1 - URL: v.gd/gitcourse}
+  Git cheatsheet}
 \end{center}
-
-\begin{navybox}[title=Why use version control?]
-  \begin{multicols}{2}
-    \begin{itemize}
-      \itemsep\itempad
-    \item To avoid multiple copies of files
-    \item To collaborate
-    \item To aid reproducibility
-    \item To keep track of your work
-    \item To find mistakes
-    \item To work different things
-    \end{itemize}
-  \end{multicols}
-\end{navybox}
 
 \begin{bluebox}[title=Git Glossary]
   \begin{itemize}
