--- a/handouts/handout-lesson1.tex
+++ b/handouts/handout-lesson1.tex
@@ -20,16 +20,16 @@
   \begin{itemize}
     \itemsep\itempad
   \item \textbf{Repository/Repo} -- A project that is being managed by Git
-  \item \textbf{Commit/Changeset} -- A set of changes recorded in the history of
+  \item \textbf{Commit} -- A set of changes recorded in the history of
     a project
   \item \textbf{Staging Area} -- The location where file changes are recorded to
     prepare for inclusion in a commit
-  \item \textbf{Working Directory/Working Tree} -- The visible copy of files in a
-    project that you view and edit as usual
+  \item \textbf{Working Tree} -- The visible copy of files in a project that you view
+    and edit as usual
   \item \textbf{Branch} -- A label used for a set of commits with a particular
     purpose
   \item \textbf{HEAD} -- The current commit that the Working Directory is based on
-  \item \textbf{master} -- The default name given to the starting branch of all repositories
+  \item \textbf{main} -- The default name given to the starting branch of all repositories
   \end{itemize}
 \end{bluebox}
 
