Make all boxes same colour

--- a/handouts/handout-lesson1.tex
+++ b/handouts/handout-lesson1.tex
@@ -33,7 +33,7 @@
   \end{itemize}
 \end{bluebox}
 
-\begin{navybox}[title=Git Command Cheat Sheet]
+\begin{bluebox}[title=Git Command Cheat Sheet]
   \begin{itemize}
     \itemsep\itempad
   \item \textbf{git config} -- Change the settings that Git uses
@@ -58,7 +58,7 @@
   \item \textbf{git merge -{}-no-edit BRANCH\_NAME} -- Merge BRANCH\_NAME into the
     current branch
   \end{itemize}
-\end{navybox}
+\end{bluebox}
 
 
 \furtherhelp
