--- a/handouts/handout-lesson2.tex
+++ b/handouts/handout-lesson2.tex
@@ -15,7 +15,7 @@
   Using Git to Code, Collaborate and Share - Lesson 2 - URL: v.gd/gitcourse}
 \end{center}
 
-\begin{navybox}[title=Things to think when publishing code]
+\begin{bluebox}[title=Things to think when publishing code]
   \begin{itemize}
     \itemsep\itempad
   \item \textbf{Public or Private?} - What level of visibility should your
@@ -31,7 +31,7 @@
   \item \textbf{CONTRIBUTING.md} - Tell potential contributors the kind of work
     you're interested in and the process they should follow
   \end{itemize}
-\end{navybox}
+\end{bluebox}
 
 \begin{bluebox}[title=Git Glossary]
   \begin{itemize}
@@ -53,7 +53,7 @@
   \end{itemize}
 \end{bluebox}
 
-\begin{navybox}[title=Git Command Cheat Sheet]
+\begin{bluebox}[title=Git Command Cheat Sheet]
   \begin{itemize}
     \itemsep\itempad
   \item \textbf{git remote add origin REPOSITORY\_URL} - Configure a local
@@ -65,7 +65,7 @@
   \item \textbf{git clone REPOSITORY\_URL} - Create a new local repository that
     is a copy of remote one
   \end{itemize}
-\end{navybox}
+\end{bluebox}
 
 
 \furtherhelp
