Signpost online Git documentation

--- a/handouts/handout.tex
+++ b/handouts/handout.tex
@@ -120,6 +120,9 @@
   \end{itemize}
 \end{bluebox}
 
+For a more exhaustive description of the various Git commands and their options, you can
+consult \href{https://git-scm.com/docs}{Git's online documentation}.
+
 
 \furtherhelp
 
