--- a/handouts/handout.tex
+++ b/handouts/handout.tex
@@ -106,7 +106,7 @@
     current branch
   \item \textbf{git rebase NEW\_BASE} -- Rebase current branch onto NEW\_BASE
   \item \textbf{git remote add origin REPOSITORY\_URL} -- Configure a local repository
-    with a remote with the label 'origin'
+    with a remote with the label `origin'
   \item \textbf{git push} -- Synchronise changes in the current local branch to its
     upstream branch
   \item \textbf{git push --tags} -- As above, but also push any tags you've created to
