It's actually a GitHub cheatsheet too...

--- a/handouts/handout.tex
+++ b/handouts/handout.tex
@@ -13,7 +13,7 @@
 
 \begin{center}
   {\LARGE
-  Git cheatsheet}
+  Git/GitHub cheatsheet}
 \end{center}
 
 \begin{bluebox}[title=Things to think when publishing code]
