Replace uses of `git add` with `git stage`

--- a/handouts/git-course-handout.tex
+++ b/handouts/git-course-handout.tex
@@ -85,8 +85,9 @@
   \item \textbf{git config} -- Change (or view) the settings that Git uses
   \item \textbf{git init} -- Create a new repository in the current directory
   \item \textbf{git status} -- High-level overview of changes made since the last commit
-  \item \textbf{git add} -- Stage a file (or changes made to a file) for inclusion in
+  \item \textbf{git stage} -- Stage a file (or changes made to a file) for inclusion in
     the next commit
+  \item \textbf{git add} -- See ``git stage''
   \item \textbf{git commit -m ``COMMIT MESSAGE''} -- Create a new commit including all
     staged file changes
   \item \textbf{git commit --amend} -- Incorporate further changes into the last commit
