Handout: Fix a few double hyphens turned into n-dashes

--- a/handouts/git-course-handout.tex
+++ b/handouts/git-course-handout.tex
@@ -90,7 +90,7 @@
   \item \textbf{git add} -- See ``git stage''
   \item \textbf{git commit -m ``COMMIT MESSAGE''} -- Create a new commit including all
     staged file changes
-  \item \textbf{git commit --amend} -- Incorporate further changes into the last commit
+  \item \textbf{git commit -{}-amend} -- Incorporate further changes into the last commit
     and/or edit the commit message
   \item \textbf{git log} -- Display the commit history of a repository
   \item \textbf{git diff} -- Show in detail the changes made in the working directory
@@ -104,7 +104,7 @@
   \item \textbf{git branch -D BRANCH\_NAME} -- Delete a branch (be careful with this one!)
   \item \textbf{git switch BRANCH\_NAME} -- Update the position of HEAD to
     a new branch
-  \item \textbf{git switch --detach COMMIT\_NAME} -- Update the position of HEAD to a
+  \item \textbf{git switch -{}-detach COMMIT\_NAME} -- Update the position of HEAD to a
     new commit
   \item \textbf{git checkout} -- See ``git switch''
   \item \textbf{git merge -{}-no-edit BRANCH\_NAME} -- Merge BRANCH\_NAME into the
@@ -114,7 +114,7 @@
     with a remote with the label `origin'
   \item \textbf{git push} -- Synchronise changes in the current local branch to its
     upstream branch
-  \item \textbf{git push --tags} -- As above, but also push any tags you've created to
+  \item \textbf{git push -{}-tags} -- As above, but also push any tags you've created to
     the remote
   \item \textbf{git pull} -- Synchronise changes in the upstream branch to the current
     local one
